updated classification data

--- a/patents/patents.html
+++ b/patents/patents.html
@@ -41,7 +41,7 @@ var color = d3.scale.linear()
     .range(["hsl(152,80%,80%)", "hsl(228,30%,40%)"])
     .interpolate(d3.interpolateHcl);
     
-var color1 = d3.scale.category20c(),
+var color1 = d3.scale.category20c();
 
 var pack = d3.layout.pack()
     .padding(2)
