--- a/patents/patents.html
+++ b/patents/patents.html
@@ -69,7 +69,7 @@ console.log(nodes);
       .attr("class", function(d) { return d.parent ? d.children ? "node" : "node node--leaf" : "node node--root"; })
       // .style("fill", function(d) { return d.children ? color(d.depth) : null; })
 
-console.log(d3.hsl(color1("test")).darker(1).tostring())
+console.log(d3.hsl(color1("test")).tostring())
 	// testing out categorical coloring
       .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker(d.depth).toString() : null : "light blue" ;})
       .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
