updated classification data

--- a/patents/patents.html
+++ b/patents/patents.html
@@ -69,9 +69,9 @@ console.log(nodes);
       .attr("class", function(d) { return d.parent ? d.children ? "node" : "node node--leaf" : "node node--root"; })
       // .style("fill", function(d) { return d.children ? color(d.depth) : null; })
 
-console.log(d3.hsl(color1("test")).darker(1).toString())
+console.log(d3.hsl(color1("Human necessities")).darker(1).toString())
 	// testing out categorical coloring
-      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker(1).toString() : null : "blue" ;})
+      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker(d.depth).toString() : null : "blue" ;})
       .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
 
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
