--- a/patents/patents.html
+++ b/patents/patents.html
@@ -71,7 +71,7 @@ console.log(nodes);
 
 console.log(d3.hsl(color1("Human necessities")).darker(1).toString())
 	// testing out categorical coloring
-      .style("fill", function(d) { return d.parent ? d.children ? "red" : null : "blue" ;})
+      .style("fill", function(d) { return d.parent ? d.children ? "red" : "white" : "blue" ;})
       .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
 
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
