--- a/patents/patents.html
+++ b/patents/patents.html
@@ -71,7 +71,7 @@ console.log(nodes);
 
 	// testing out categorical coloring
       .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker(d.depth).toString() : null : "blue"; })
-      .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
+     // .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
 
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
 	
