--- a/patents/patents.html
+++ b/patents/patents.html
@@ -70,7 +70,7 @@ console.log(nodes);
       // .style("fill", function(d) { return d.children ? color(d.depth) : null; })
 
 	// testing out categorical coloring
-      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker(d.depth).toString() : null : "blue"; })
+      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker(d.depth).toString() : null : "lightgrey"; })
      // .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
 
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
@@ -95,7 +95,7 @@ console.log(nodes);
   var node = svg.selectAll("circle,text");
 
   d3.select("body")
-      .style("background", color(-1))
+      .style("background", "white")
       .on("click", function() { zoom(root); });
 
   zoomTo([root.x, root.y, root.r * 2 + margin]);
