--- a/patents/patents.html
+++ b/patents/patents.html
@@ -70,7 +70,7 @@ console.log(nodes);
       // .style("fill", function(d) { return d.children ? color(d.depth) : null; })
 
 	// testing out categorical coloring
-      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker((d.depth - 0)*0.5).toString() : null : "lightgrey"; })
+      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker((d.depth - 0)*0.5).toString() : null : "lightblue"; })
      // .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
 
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
@@ -115,6 +115,7 @@ console.log(nodes);
       .filter(function(d) { return d.parent === focus || this.style.display === "inline"; })
         .style("fill-opacity", function(d) { return d.parent === focus ? 1 : 0; })
         .each("start", function(d) { if (d.parent === focus) this.style.display = "inline"; })
+        .each("start", function(d) { if ( focus.depth == 0) return d.r > 50 ? null : this.style.display = "none"; })
         .each("end", function(d) { if (d.parent !== focus) this.style.display = "none"; })
         .each("end", function(d) { if ( focus.depth == 0) return d.r > 50 ? null : this.style.display = "none"; });
   }
