--- a/patents/patents.html
+++ b/patents/patents.html
@@ -70,8 +70,8 @@ console.log(nodes);
       // .style("fill", function(d) { return d.children ? color(d.depth) : null; })
 
 	// testing out categorical coloring
-      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(d3.hsl(color1(d.lev2)).darker((d.depth - 0)*0.5).toString()).lighter(2).toString() : null : "lightblue"; })
-     // .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
+      .style("fill", function(d) { return d.parent ? d.children ? d3.hsl(color1(d.lev2)).darker((d.depth - 0)*0.6).toString() : null : "lightblue"; })
+      .style("fill-opacity", 0.6; })
 
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
 	
