updated classification data

--- a/patents/treemap.html
+++ b/patents/treemap.html
@@ -61,7 +61,7 @@ rect.parent,
 
 <div id="chart">
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="d3/d3.v3.min.js"></script>
 <script>
 
 var margin = {top: 20, right: 0, bottom: 0, left: 0},
@@ -243,11 +243,3 @@ d3.json("patents.json", function(root) {
 });
 
 </script>
-<script>
-
-GoogleAnalyticsObject = "ga", ga = function() { ga.q.push(arguments); }, ga.q = [], ga.l = +new Date;
-ga("create", "UA-48272912-3", "ocks.org");
-ga("send", "pageview");
-
-</script>
-<script async src="//www.google-analytics.com/analytics.js"></script>
