updated classification data

--- a/patents/treemap.html
+++ b/patents/treemap.html
@@ -106,7 +106,7 @@ grandparent.append("text")
     .attr("y", 6 - margin.top)
     .attr("dy", ".75em");
 
-d3.json("patents.json", function(root) {
+d3.json("flare.json", function(root) {
   initialize(root);
   accumulate(root);
   layout(root);
