--- a/patents/treemap.html
+++ b/patents/treemap.html
@@ -78,6 +78,8 @@ rect.parent,
   <a href="../" rel="author">Mike Bostock</a>
 </footer>
 
+    <script type="text/javascript" src="d3/d3.js"></script>
+    <script type="text/javascript" src="d3/d3.layout.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
