updated classification data

--- a/patents/treemap.html
+++ b/patents/treemap.html
@@ -135,7 +135,10 @@ d3.json("flare.json", function(root) {
     root.dx = width;
     root.dy = height;
     root.depth = 0;
+    root.size = +root.size;
   }
+  
+  console.log(root);
 
   // Aggregate the values for internal nodes. This is normally done by the
   // treemap layout, but not here because of our custom implementation.
