--- a/patents/treemap.html
+++ b/patents/treemap.html
@@ -247,7 +247,8 @@ d3.json("patents_tree.json", function(root) {
 
   function text(text) {
     text.attr("x", function(d) { return x(d.x) + 6; })
-        .attr("y", function(d) { return y(d.y) + 6; });
+        .attr("y", function(d) { return y(d.y) + 6; })
+        .call(wrap, 100);
   }
 
   function rect(rect) {
@@ -265,7 +266,40 @@ d3.json("patents_tree.json", function(root) {
         ? name(d.parent) + "." + d.name
         : d.name;
   }
+  
+  
+  // define wrap function
+
+function wrap(text, width) {
+  text.each(function() {
+    var text = d3.select(this),
+        words = text.text().split(/\s+/).reverse(),
+        word,
+        line = [],
+        lineNumber = 0,
+        lineHeight = 1.1, // ems
+        y = text.attr("y"),
+        dy = parseFloat(text.attr("dy"));
+        tspan = text.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
+    while (word = words.pop()) {
+      line.push(word);
+      tspan.text(line.join(" "));
+      if (tspan.node().getComputedTextLength() > width) {
+        line.pop();
+        tspan.text(line.join(" "));
+        line = [word];
+        tspan = text.append("tspan").attr("x", 0).attr("y", y).attr("dy", lineHeight + dy + "em").text(word);
+      }
+    }
+  });
+}
+
+  
+  
 });
+
+
+
 
 </script>
 <script>
