--- a/patents/treemap.html
+++ b/patents/treemap.html
@@ -206,8 +206,7 @@ d3.json("patents_tree.json", function(root) {
     g.append("text")
         .attr("dy", ".75em")
         .text(function(d) { return d.name; })
-        .call(text)
-        .call(wrap, 100);
+        .call(text);
 
     function transition(d) {
       if (transitioning || !d) return;
@@ -268,32 +267,6 @@ d3.json("patents_tree.json", function(root) {
   }
   
   
-  // define wrap function
-
-function wrap(text, width) {
-  text.each(function() {
-    var text = d3.select(this),
-        words = text.text().split(/\s+/).reverse(),
-        word,
-        line = [],
-        lineNumber = 0,
-        lineHeight = 1.1, // ems
-        y = text.attr("y"),
-        dy = parseFloat(text.attr("dy"));
-        tspan = text.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
-    while (word = words.pop()) {
-      line.push(word);
-      tspan.text(line.join(" "));
-      if (tspan.node().getComputedTextLength() > width) {
-        line.pop();
-        tspan.text(line.join(" "));
-        line = [word];
-        tspan = text.append("tspan").attr("x", 0).attr("y", y).attr("dy", lineHeight + dy + "em").text(word);
-      }
-    }
-  });
-}
-
   
   
 });
