first radial heat chart created

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -62,6 +62,7 @@ path {
  
     
 <script src="../d3/d3.min.js"></script>
+<script src="circularHeatChart.js"></script>
 <script>
 
 var chart = circularHeatChart()
