--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -53,6 +53,7 @@ path {
         </p>
 
         <div id="canvas">
+        <div id="empty">
         
         </div>
         
@@ -73,184 +74,23 @@ var chart = circularHeatChart()
     .segmentLabels(["Midnight", "1am", "2am", "3am", "4am", "5am", "6am", "7am", "8am", "9am", "10am", "11am", "Midday", "1pm", "2pm", "3pm", "4pm", "5pm", "6pm", "7pm", "8pm", "9pm", "10pm", "11pm"])
     .margin({top: 20, right: 0, bottom: 20, left: 280});
 
-var energyData = [
- 10.0,
- 9.0,
- 10.0,
- 10.0,
- 9.0,
- 8.0,
- 13.0,
- 19.0,
- 88.0,
- 108.0,
- 92.0,
- 93.0,
- 69.0,
- 82.0,
- 99.0,
- 76.0,
- 67.0,
- 67.0,
- 87.0,
- 114.0,
- 89.0,
- 82.0,
- 64.0,
- 51.0,
- 29.0,
- 25.0,
- 26.0,
- 26.0,
- 25.0,
- 31.0,
- 26.0,
- 20.0,
- 13.0,
- 11.0,
- 12.0,
- 8.0,
- 9.0,
- 6.0,
- 3.0,
- 4.0,
- 3.0,
- 8.0,
- 13.0,
- 15.0,
- 16.0,
- 22.0,
- 25.0,
- 14.0,
- 8.0,
- 10.0,
- 11.0,
- 11.0,
- 11.0,
- 10.0,
- 12.0,
- 14.0,
- 47.0,
- 92.0,
- 84.0,
- 56.0,
- 53.0,
- 59.0,
- 44.0,
- 34.0,
- 45.0,
- 30.0,
- 62.0,
- 78.0,
- 68.0,
- 49.0,
- 47.0,
- 29.0,
- 24.0,
- 22.0,
- 21.0,
- 22.0,
- 22.0,
- 25.0,
- 25.0,
- 19.0,
- 44.0,
- 80.0,
- 67.0,
- 61.0,
- 49.0,
- 38.0,
- 45.0,
- 60.0,
- 57.0,
- 58.0,
- 71.0,
- 71.0,
- 62.0,
- 49.0,
- 53.0,
- 35.0,
- 15.0,
- 14.0,
- 15.0,
- 16.0,
- 15.0,
- 15.0,
- 16.0,
- 17.0,
- 33.0,
- 77.0,
- 67.0,
- 53.0,
- 42.0,
- 42.0,
- 40.0,
- 35.0,
- 25.0,
- 28.0,
- 56.0,
- 59.0,
- 56.0,
- 45.0,
- 41.0,
- 29.0,
- 23.0,
- 23.0,
- 26.0,
- 27.0,
- 25.0,
- 26.0,
- 25.0,
- 26.0,
- 20.0,
- 18.0,
- 16.0,
- 24.0,
- 34.0,
- 67.0,
- 53.0,
- 40.0,
- 56.0,
- 46.0,
- 44.0,
- 56.0,
- 58.0,
- 51.0,
- 36.0,
- 24.0,
- 22.0,
- 18.0,
- 20.0,
- 24.0,
- 24.0,
- 27.0,
- 23.0,
- 15.0,
- 11.0,
- 11.0,
- 14.0,
- 29.0,
- 22.0,
- 32.0,
- 42.0,
- 37.0,
- 49.0,
- 51.0,
- 42.0,
- 23.0,
- 10.0,
- 6.0,
- 2.0,
- 1.0
-   ];
+var full = [10.0, 9.0, 10.0, 10.0, 9.0, 8.0, 13.0, 19.0, 88.0, 108.0, 92.0, 93.0, 69.0, 82.0, 99.0, 76.0, 67.0, 67.0, 87.0, 114.0, 89.0, 82.0, 64.0, 51.0, 29.0, 25.0, 26.0, 26.0, 25.0, 31.0, 26.0, 20.0, 13.0, 11.0, 12.0, 8.0, 9.0, 6.0, 3.0, 4.0, 3.0, 8.0, 13.0, 15.0, 16.0, 22.0, 25.0, 14.0, 8.0, 10.0, 11.0, 11.0, 11.0, 10.0, 12.0, 14.0, 47.0, 92.0, 84.0, 56.0, 53.0, 59.0, 44.0, 34.0, 45.0, 30.0, 62.0, 78.0, 68.0, 49.0, 47.0, 29.0, 24.0, 22.0, 21.0, 22.0, 22.0, 25.0, 25.0, 19.0, 44.0, 80.0, 67.0, 61.0, 49.0, 38.0, 45.0, 60.0, 57.0, 58.0, 71.0, 71.0, 62.0, 49.0, 53.0, 35.0, 15.0, 14.0, 15.0, 16.0, 15.0, 15.0, 16.0, 17.0, 33.0, 77.0, 67.0, 53.0, 42.0, 42.0, 40.0, 35.0, 25.0, 28.0, 56.0, 59.0, 56.0, 45.0, 41.0, 29.0, 23.0, 23.0, 26.0, 27.0, 25.0, 26.0, 25.0, 26.0, 20.0, 18.0, 16.0, 24.0, 34.0, 67.0, 53.0, 40.0, 56.0, 46.0, 44.0, 56.0, 58.0, 51.0, 36.0, 24.0, 22.0, 18.0, 20.0, 24.0, 24.0, 27.0, 23.0, 15.0, 11.0, 11.0, 14.0, 29.0, 22.0, 32.0, 42.0, 37.0, 49.0, 51.0, 42.0, 23.0, 10.0, 6.0, 2.0, 1.0];
+
+var empty = [7.0, 8.0, 7.0, 6.0, 6.0, 9.0, 16.0, 23.0, 97.0, 108.0, 81.0, 69.0, 77.0, 61.0, 59.0, 41.0, 59.0, 85.0, 132.0, 121.0, 90.0, 46.0, 33.0, 23.0, 6.0, 4.0, 4.0, 3.0, 3.0, 4.0, 6.0, 10.0, 11.0, 8.0, 2.0, 3.0, 1.0, 1.0, 2.0, 1.0, 0.0, 2.0, 6.0, 9.0, 8.0, 11.0, 11.0, 9.0, 1.0, 1.0, 1.0, 1.0, 1.0, 6.0, 9.0, 20.0, 87.0, 91.0, 60.0, 49.0, 37.0, 34.0, 18.0, 15.0, 35.0, 77.0, 93.0, 73.0, 50.0, 49.0, 33.0, 24.0, 12.0, 10.0, 11.0, 11.0, 11.0, 11.0, 16.0, 18.0, 74.0, 104.0, 74.0, 68.0, 60.0, 38.0, 46.0, 44.0, 45.0, 79.0, 87.0, 81.0, 58.0, 50.0, 33.0, 18.0, 7.0, 5.0, 7.0, 7.0, 7.0, 8.0, 10.0, 16.0, 64.0, 77.0, 78.0, 68.0, 68.0, 50.0, 42.0, 37.0, 65.0, 120.0, 98.0, 66.0, 39.0, 28.0, 19.0, 19.0, 12.0, 11.0, 12.0, 11.0, 8.0, 9.0, 11.0, 10.0, 6.0, 27.0, 47.0, 85.0, 124.0, 154.0, 145.0, 164.0, 155.0, 155.0, 98.0, 100.0, 72.0, 49.0, 28.0, 22.0, 5.0, 10.0, 8.0, 5.0, 5.0, 4.0, 4.0, 5.0, 2.0, 8.0, 36.0, 55.0, 93.0, 114.0, 106.0, 85.0, 83.0, 64.0, 37.0, 9.0, 4.0, 2.0, 0.0, 0.0];
 
 d3.select('#canvas')
     .selectAll('svg')
-    .data([energyData])
+    .data([full])
     .enter()
     .append('svg')
     .call(chart);
   
+d3.select('#empty')
+    .selectAll('svg')
+    .data([empty])
+    .enter()
+    .append('svg')
+    .call(chart);
 
 
 
