added second heat chart for empties

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -15,12 +15,10 @@ svg {
   width: 960px;
   height: 300px;
 }
-#canvas svg, #chart3 svg {
+#full svg, #empty svg {
   height: 360px;
 }
-#chart4 svg {
-  height: 470px;
-}
+
 path {
   stroke: #777;
   stroke-width: 0.1px;
@@ -33,10 +31,7 @@ path {
 }
 .labels.segment {
   font-size: 10px;
-}
 
-#chart3 .labels {
-  fill: #555;
 }
 
 </style>
