added second heat chart for empties

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -111,7 +111,7 @@ d3.select('#empty')
     .append('svg')
     .call(emptychart);
 
-/* Add a mouseover event */
+/* Add a mouseover event 
 d3.selectAll("#empty path").on('mouseover', function() {
   var d = d3.select(this).data()[0];
     d3.select("#emptyinfo").text(d.title + ' has value ' + d.value);
@@ -119,7 +119,7 @@ d3.selectAll("#empty path").on('mouseover', function() {
 d3.selectAll("#empty svg").on('mouseout', function() {
     d3.select("#emptyinfo").text('');  
 });
-
+*/
 
 
 
