--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -99,8 +99,9 @@ d3.select('#full')
 
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
-  var d = d3.select(this).full()[0];
-    d3.select("#fullinfo").text(d.title + ' has value ' + d.value);
+  var d = d3.select(this).full();
+    d3.select("#fullinfo").text(' has value ' + d.value)
+    console.log(d.value);
 });
 d3.selectAll("#full svg").on('mouseout', function() {
     d3.select("#fullinfo").text('');  
