--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -99,7 +99,9 @@ d3.select('#full')
 
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
-  console.log(d3.select(this).data())
+  var d = d3.select(this).data();
+  d3.select("#fullinfo").text(d);
+
 });
 d3.selectAll("#full svg").on('mouseout', function() {
     d3.select("#fullinfo").text('');  
