added second heat chart for empties

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -54,10 +54,12 @@ path {
         <p>This chart shows...
         </p>
 
-        <div id="full">
+        <div id="full" class="large-6 columns">
+        Full
         </div>
 
-        <div id="empty">
+        <div id="empty" class="large-6 columns">
+        Empty
         </div>
 
         
