added second heat chart for empties

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -54,12 +54,14 @@ path {
         <p>This chart shows...
         </p>
 
+        <div class="row">
         <div id="full" class="large-6 columns">
         Full
         </div>
 
         <div id="empty" class="large-6 columns">
         Empty
+        </div>
         </div>
 
         
