added second heat chart for empties

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -50,17 +50,16 @@ path {
         <p>These circular heat maps show Capital Bikeshare system outage information for the week of 4/13/15 to 4/19/15 using data obtained from <a href="http://www.cabitracker.com/outage_history.php">Capital Bikeshare Tracker</a>.
         A system outage takes two forms: a full station or an empty station. When a station is full, riders currently using bikes can't park at that station so may have to go out of there way to find another station to dock their bike. When the station is empty, a rider in need of a bike will have to go to another station to obtain one.
         </p>
-        <br>
-        <br>
+       
         <div id="full" class="large-6 columns">
           <div class="row">
-            <div class="large-6 columns"><h4>Full Stations</h4></div>
+            <div class="large-6 columns"><h5><strong>Full Stations</strong></h5></div>
           </div>
         </div>
 
         <div id="empty" class="large-6 columns">
           <div class="row">
-            <div class="large-6 columns"><h4>Empty Stations</h4></div>
+            <div class="large-6 columns"><h5><strong>Empty Stations</strong></h5></div>
           </div>
         </div>
 
