--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -100,7 +100,7 @@ var full = [10.0, 9.0, 10.0, 10.0, 9.0, 8.0, 13.0, 19.0, 88.0, 108.0, 92.0, 93.0
 
 var empty = [7.0, 8.0, 7.0, 6.0, 6.0, 9.0, 16.0, 23.0, 97.0, 108.0, 81.0, 69.0, 77.0, 61.0, 59.0, 41.0, 59.0, 85.0, 132.0, 121.0, 90.0, 46.0, 33.0, 23.0, 6.0, 4.0, 4.0, 3.0, 3.0, 4.0, 6.0, 10.0, 11.0, 8.0, 2.0, 3.0, 1.0, 1.0, 2.0, 1.0, 0.0, 2.0, 6.0, 9.0, 8.0, 11.0, 11.0, 9.0, 1.0, 1.0, 1.0, 1.0, 1.0, 6.0, 9.0, 20.0, 87.0, 91.0, 60.0, 49.0, 37.0, 34.0, 18.0, 15.0, 35.0, 77.0, 93.0, 73.0, 50.0, 49.0, 33.0, 24.0, 12.0, 10.0, 11.0, 11.0, 11.0, 11.0, 16.0, 18.0, 74.0, 104.0, 74.0, 68.0, 60.0, 38.0, 46.0, 44.0, 45.0, 79.0, 87.0, 81.0, 58.0, 50.0, 33.0, 18.0, 7.0, 5.0, 7.0, 7.0, 7.0, 8.0, 10.0, 16.0, 64.0, 77.0, 78.0, 68.0, 68.0, 50.0, 42.0, 37.0, 65.0, 120.0, 98.0, 66.0, 39.0, 28.0, 19.0, 19.0, 12.0, 11.0, 12.0, 11.0, 8.0, 9.0, 11.0, 10.0, 6.0, 27.0, 47.0, 85.0, 124.0, 154.0, 145.0, 164.0, 155.0, 155.0, 98.0, 100.0, 72.0, 49.0, 28.0, 22.0, 5.0, 10.0, 8.0, 5.0, 5.0, 4.0, 4.0, 5.0, 2.0, 8.0, 36.0, 55.0, 93.0, 114.0, 106.0, 85.0, 83.0, 64.0, 37.0, 9.0, 4.0, 2.0, 0.0, 0.0];
 
-fullchart.accessor(function(d) {return d[0].count_full;})
+fullchart.accessor(function(d) {return d.count_full;})
 
 console.log(alljson);
 
