testing json data format

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -282,7 +282,7 @@ d3.select('#full')
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
     var d = d3.select(this).data()[0];
-    console.log(d.time + ' :: ' + d.count_full;
+    console.log(d.time + ' :: ' + d.count_full);
 });
 
   
