--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -54,12 +54,14 @@ path {
         <div id="full" class="large-6 columns">
           <div class="row">
             <div class="large-6 columns"><h5><strong>Full Stations</strong></h5></div>
+            <div id="fullinfo"></div>
           </div>
         </div>
 
         <div id="empty" class="large-6 columns">
           <div class="row">
             <div class="large-6 columns"><h5><strong>Empty Stations</strong></h5></div>
+            <div id="emptyinfo"></div>
           </div>
         </div>
 
@@ -281,9 +283,14 @@ d3.select('#full')
 
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
-    var d = d3.select(this).data()[0];
-    console.log(d.time + ' :: ' + d.count_full);
+  var d = d3.select(this).data()[0];
+    d3.select("#fullinfo").text(d.time + ' :: ' + d.count_full));
 });
+d3.selectAll("#full svg").on('mouseout', function() {
+    d3.select("#fullinfo").text('');  
+});
+
+
 
   
 d3.select('#empty')
