testing json data format

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -284,7 +284,7 @@ d3.select('#full')
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
   var d = d3.select(this).data()[0];
-    d3.select("#fullinfo").text(d.time + ' :: ' + d.count_full));
+    d3.select("#fullinfo").text(d.time + ' :: ' + d.count_full);
 });
 d3.selectAll("#full svg").on('mouseout', function() {
     d3.select("#fullinfo").text('');  
