--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -282,9 +282,6 @@ d3.select('#full')
     .append('div')
     .attr('id', 'fullinfo')
 
-d3.select('#empty')
-    .append('div')
-    .attr('id', 'emptyinfo')
 
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
@@ -299,13 +296,34 @@ d3.selectAll("#full svg").on('mouseout', function() {
 
 
 
-  
+
+
+/* Build empty chart */
+
+emptychart.accessor(function(d) {return d.count_full;})
+
 d3.select('#empty')
     .selectAll('svg')
-    .data([empty])
+    .data([alljson])
     .enter()
     .append('svg')
     .call(emptychart);
+
+d3.select('#empty')
+    .append('div')
+    .attr('id', 'emptyinfo')
+
+
+/* Add a mouseover event */
+d3.selectAll("#empty path").on('mouseover', function() {
+  var d = d3.select(this).data()[0];
+    d3.select("#fullinfo").text(d.time + ' :: ' + d.count_full)
+    d3.select("#emptyinfo").text(d.time + ' :: ' + d.count_empty);
+});
+d3.selectAll("#empty svg").on('mouseout', function() {
+    d3.select("#fullinfo").text('')
+    d3.select("#emptyinfo").text('');  ;  
+});
 
 
 </script>
