--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -286,12 +286,12 @@ d3.select('#full')
 /* Add a mouseover event */
 d3.selectAll("#full path").on('mouseover', function() {
   var d = d3.select(this).data()[0];
-    d3.select("#fullinfo").text(d.time + ' :: ' + d.count_full)
-    d3.select("#emptyinfo").text(d.time + ' :: ' + d.count_empty);
+    d3.select("#fullinfo").text(d.time + ' - ' + d.count_full + 'full stations')
+    d3.select("#emptyinfo").text(d.time + ' - ' + d.count_empty + 'empty stations');
 });
 d3.selectAll("#full svg").on('mouseout', function() {
-    d3.select("#fullinfo").text('')
-    d3.select("#emptyinfo").text('');  ;  
+    d3.select("#fullinfo").text('Hover over chart to see number of full stations')
+    d3.select("#emptyinfo").text('Hover over chart to see number of empty stations');  ;  
 });
 
 
@@ -317,12 +317,12 @@ d3.select('#empty')
 /* Add a mouseover event */
 d3.selectAll("#empty path").on('mouseover', function() {
   var d = d3.select(this).data()[0];
-    d3.select("#fullinfo").text(d.time + ' :: ' + d.count_full)
-    d3.select("#emptyinfo").text(d.time + ' :: ' + d.count_empty);
+    d3.select("#fullinfo").text(d.time + ' - ' + d.count_full + 'full stations')
+    d3.select("#emptyinfo").text(d.time + ' - ' + d.count_empty + 'empty stations');
 });
 d3.selectAll("#empty svg").on('mouseout', function() {
-    d3.select("#fullinfo").text('')
-    d3.select("#emptyinfo").text('');  ;  
+    d3.select("#fullinfo").text('Hover over chart to see number of full stations')
+    d3.select("#emptyinfo").text('Hover over chart to see number of empty stations');  ;  
 });
 
 
