testing json data format

--- a/bikeshare/bikeshare.html
+++ b/bikeshare/bikeshare.html
@@ -281,6 +281,8 @@ d3.select('#full')
 d3.select('#full')
     .append('div')
     .attr('id', 'fullinfo')
+    .style('font-size', '13px')
+    .style('font-style', 'italic')
     .text('Hover over chart to see number of full stations')
 
 
@@ -313,6 +315,8 @@ d3.select('#empty')
 d3.select('#empty')
     .append('div')
     .attr('id', 'emptyinfo')
+    .style('font-size', '13px')
+    .style('font-style', 'italic')
     .text('Hover over chart to see number of empty stations');
 
 
