trying out the chord diagram

--- a/airlines/index.html
+++ b/airlines/index.html
@@ -69,7 +69,7 @@ var svg = d3.select("body").append("svg")
 svg.append("circle")
 .attr("r", outerRadius);
  
-d3.csv("teams.csv", function(cities) {
+d3.csv("cities.csv", function(cities) {
 d3.json("matrix.json", function(matrix) {
  
 // Compute the chord layout.
