trying out the chord diagram

--- a/airlines/index.html
+++ b/airlines/index.html
@@ -25,17 +25,12 @@ display: none;
  
 </style>
  
-<header>
-<aside>November 14th, 2013</aside>
-<p>Modified from Mike Bostock's <a href="http://bost.ocks.org/mike/uberdata/">Uber Rides by Neighborhood</a></p>
-<p>Modified from eleyine's <a href="http://bl.ocks.org/eleyine/raw/6846156/">Visa requirements in Arab countries</a></p>
-</header>
+
+<h1>Airline Passenger Flows in 2014</h1>
+<h3>Top 20 Airports</h3>
+
+<p>Mouseover to focus on travel to and from a particular city.</p>
  
-<h1>Andrew's Test</h1>
- 
-<aside>Mouseover to focus on travel to and from a particular city.</aside>
- 
-<p>Built with <a href="http://d3js.org/">d3.js</a>.</aside>
  
 <script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
 <script>
