trying out the chord diagram

--- a/airlines/index.html
+++ b/airlines/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Andrew's Test</title>
+<title>Airline Flows</title>
 <style>
 
 @import url(style.css);
@@ -132,7 +132,6 @@ return p.source.index != i
  
  
 <footer>
-<aside>November 14th, 2013</aside>
 <p>Modified from Mike Bostock's <a href="http://bost.ocks.org/mike/uberdata/">Uber Rides by Neighborhood</a></p>
 <p>Modified from eleyine's <a href="http://bl.ocks.org/eleyine/raw/6846156/">Visa requirements in Arab countries</a></p>
 </footer>
