trying out the chord diagram

--- a/airlines/index_tooltip.html
+++ b/airlines/index_tooltip.html
@@ -28,6 +28,7 @@ display: none;
 
 <h1>Airline Passenger Flows in 2014</h1>
 <h3>Top 20 Airports</h3>
+<div id="tooltip"></div>
 
 <p>Mouseover to focus on travel to and from a particular city.</p>
  
